--- a/todo-list-ui/src/app/app.component.html
+++ b/todo-list-ui/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div>
   <app-helloWorld></app-helloWorld>
 </div>
+<hr />
+<div *ngFor="let todo of todos">
+  <app-todo-component [id]="todo.id" [title]="todo.title"></app-todo-component>
+</div>
