--- a/todo-list-ui/src/app/app.component.html
+++ b/todo-list-ui/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div>
-  <app-helloWorld></app-helloWorld>
+  <hello-world></hello-world>
 </div>
 <hr />
-<div *ngFor="let todo of todos">
-  <app-todo-component [id]="todo.id" [title]="todo.title"></app-todo-component>
+<div>
+  @for (todo of todos; track todo) {
+  <todo-component [id]="todo.id" [title]="todo.title"></todo-component>
+  } @empty {
+  <p>There are no todos.</p>
+  }
 </div>
