Add TodoModal component, removed HelloWorld component and Bootstrap added to project

--- a/todo-list-ui/src/app/app.component.html
+++ b/todo-list-ui/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div>
-  <app-hello-world></app-hello-world>
-</div>
+<app-todo-modal></app-todo-modal>
 <hr />
 <div>
   @for (todo of todos; track todo) {
