refactor: refactor disable button.

--- a/todo-list-ui/src/app/todo-modal/todo-modal.component.html
+++ b/todo-list-ui/src/app/todo-modal/todo-modal.component.html
@@ -26,7 +26,7 @@
     <button
       type="button"
       class="btn btn-primary"
-      [disabled]="!inputTodo.value"
+      [disabled]="inputTodo.invalid"
       (click)="add()"
     >
       Add
