--- a/todo-list-ui/src/app/todo-modal/todo-modal.component.html
+++ b/todo-list-ui/src/app/todo-modal/todo-modal.component.html
@@ -11,6 +11,7 @@
   <div class="modal-body">
     <form>
       <div class="mb-3">
+        <label for="inputTodo">Description</label>
         <input
           id="inputTodo"
           class="form-control"
