--- a/todo-list-ui/src/app/todo-actions/todo-actions.component.html
+++ b/todo-list-ui/src/app/todo-actions/todo-actions.component.html
@@ -4,7 +4,7 @@
   (newTitle)="$event ? editTodo($event) : undefined"
 ></app-todo-edit-modal>
 <app-confirmation-modal
-  [message]="'Are you sure to delete this todo?'"
+  [message]="'Are you sure you want to delete this todo?'"
   (confirmed)="$event ? removeTodo() : undefined"
   #confirmationModal
 ></app-confirmation-modal>
